src/client/styles/styles.scss
nav {
  background-color: burlywood;
  color: rgb(0, 0, 0);
  width: 100%;
}

#userInteractive {
  background-color: bisque;
}

#temp_text {
  background-color: burlywood;
  border: 1px solid #545454;
  border-radius: 3px;
  padding: 4px;
}

button {
  background-color: #0a0605;
  border: none;
  color: white;
  padding: 16px 32px;
  text-align: center;
  font-size: 12px;
  margin: 4px 2px;
  opacity: 0.6;
  transition: 0.3s;
}

button:hover {
  opacity: 1;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: #545454;
}

form {
  border: 1px solid #545454;
  border-radius: 3px;
  padding: 4px;
}

input {
  line-height: 16px;
  width: 200px;
}

header {
  display: flex;
  justify-content: space-between;
  padding: 10px 40px;
}

form > p {
  display: inline-block;
}

* {
  font-family: Copperplate, Papyrus, fantasy;
  font-weight: bold;
}

